		On iPad the default suffix is "-ipad". Before it was ""
. [NEW] LabelAtlas: added .plist config file support. Easier to migrate games to higher resolutions.
. [NEW] LabelTTF: Added support for vertical alignment
. [FIX] All: Fixed compiler warnings. Format strings changed from %08X to %p
. [FIX] Deprecated: displayedFrame points to displayFrame avoiding infinite loop (issue #1347)
. [FIX] Events: onMouseExit/Enter fixed on Mac
. [FIX] LabelBMFont: can be "init" without further arguments
		Glyphs with big yOffset are rendered correctly (issue #1343)
. [FIX] LabelTTF: Better support for custom TTF (Mac)
		Alignments and LineBreak modes values are the both on iOS and Mac. Needed for editors.
. [FIX] NSThread+Block: fixed crash due to block not being copied to the heap
. [FIX] OpenGL: VAO are initialized on the cocos2d thread on machines that don't support shareables VAOs
. [FIX] Texture: If defaultAlpha is RGBA8888 and image has no alpha, use RGBA8 instead of RGB565
. [FIX] Texture: PVR textures sets the glTexParams before creating the texture. faster and consume less memory

version 2.0-rc0a 13-Mar-2012
. [FIX] PerformanceTest: Compiles and run
. [FIX] Tests: fixed shaders tests

version 2.0-rc0 12-Mar-2012
. [NEW] v1.1 Forward-ported changes:
		Actions: CCRepeat ends as expected (issue #1288)
		ColorLayer: incorrect size in init method
		Denshion: Background music fades ok (issue #1304)
		MenuItem: removed warning when deleting item
		ParticleSystem: prevent bursts of particles due to too high emitCounter (issue #1201)
		Sprite: fixed possible setColor and opacity
		TileMap: Flipped tiles can be changed during runtime (issue #1264)
		TileMap: Fixed a problem with multiple layers and multiple tile sets that could cause TMX maps to not load if rotation is used (issue #1302)
		Types: Added convenience function to create a ccColor4F from color components
. [NEW] Actions: Added ActionTargeted action. Useful to target other nodes from a sequence.